<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/upline"
        android:layout_width="409dp"
        android:layout_height="15dp"
        android:background="#91B853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/header"
        android:layout_width="278dp"
        android:layout_height="45dp"
        android:background="#F5EDCB"
        android:ellipsize="none"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/baby_calculator"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#1F2530"
        android:textColorHighlight="#E4A72D2D"
        android:textDirection="firstStrongRtl"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/result"
        android:layout_width="389dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/text_border"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center|end"
        android:padding="5dp"
        android:text="@string/result"
        android:textAlignment="viewEnd"
        android:textColor="#181061"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upline" />

    <TextView
        android:id="@+id/upres"
        android:layout_width="319dp"
        android:layout_height="42dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/text_border"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center|end"

        android:padding="5dp"
        android:text="@string/_0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bpl"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:background="#F3D0B2"
        android:text="@string/bpl"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi" />

    <Button
        android:id="@+id/bmi"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="#F3D0B2"
        android:text="@string/bmi"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/bml"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:background="#F3D0B2"
        android:text="@string/bml"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bpl" />

    <Button
        android:id="@+id/bdiv"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="#F3D0B2"
        android:text="@string/bdiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bml" />

    <Button
        android:id="@+id/b1"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="#D4A8DA"

        android:text="@string/_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/b2"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="#D4A8DA"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/b3"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="#D4A8DA"
        android:text="@string/_3"
        app:layout_constraintStart_toEndOf="@+id/b2"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/b4"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="#D4A8DA"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <Button
        android:id="@+id/b5"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:background="#D4A8DA"
        android:text="@string/_5"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toEndOf="@+id/b4"
        app:layout_constraintTop_toBottomOf="@+id/b2" />

    <Button
        android:id="@+id/b6"
        android:layout_width="90dp"
        android:layout_height="60dp"

        android:background="#D4A8DA"
        android:text="@string/_6"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toEndOf="@+id/b5"
        app:layout_constraintTop_toBottomOf="@+id/b3" />

    <Button
        android:id="@+id/b7"
        android:layout_width="90dp"
        android:layout_height="60dp"

        android:background="#D4A8DA"
        android:text="@string/_7"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b4" />

    <Button
        android:id="@+id/b8"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:background="#D4A8DA"
        android:text="@string/_8"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toEndOf="@+id/b7"
        app:layout_constraintTop_toBottomOf="@+id/b5" />

    <Button
        android:id="@+id/b9"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:background="#D4A8DA"
        android:text="@string/_9"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toEndOf="@+id/b8"
        app:layout_constraintTop_toBottomOf="@+id/b6" />

    <Button
        android:id="@+id/bc"
        android:layout_width="90dp"
        android:layout_height="60dp"

        android:background="#D4A8DA"
        android:text="@string/clear"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b7" />


    <Button
        android:id="@+id/b0"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:background="#D4A8DA"
        android:text="@string/_0"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toEndOf="@+id/bc"
        app:layout_constraintTop_toBottomOf="@+id/b8" />

    <Button
        android:id="@+id/bdot"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:background="#D4A8DA"
        android:text="@string/bdot"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toBottomOf="@+id/b9" />

    <Button
        android:id="@+id/button"
        android:layout_width="67dp"
        android:layout_height="44dp"
        android:background="@android:drawable/ic_menu_sort_by_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/beq"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="#BAE68E8E"
        android:text="@string/beq"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bdiv" />


</androidx.constraintlayout.widget.ConstraintLayout>